--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -13,6 +13,9 @@
     <li><strong>Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
+    <p>
+        You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}.
+    </p>
     <form method="GET">
         <input type="text" name="search_word" placeholder="Enter search word">
         <button type="submit">Search</button>
