--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -29,6 +29,9 @@
                {% if user.is_authenticated %}
                  <li>User: {{ user.get_username }}</li>
                  <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
+                 {% if perms.catalog.add_author %}
+                <li><a href="{% url 'author-create' %}">Create author</a></li>
+                {% endif %}
                  <li>
                    <form id="logout-form" method="post" action="{% url 'admin:logout' %}">
                      {% csrf_token %}
