--- a/locallibrary/catalog/templates/catalog/author_detail.html
+++ b/locallibrary/catalog/templates/catalog/author_detail.html
@@ -1,21 +1,26 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>Author: {{ author.first_name }} {{ author.last_name }}</h1>
 
-  {% if author_list %}
-    <ul>
-      {% for book in book_list %}
-      <li>
-        <a href="{{ book.get_absolute_url }}">{{ book.title }}</a>
-        ({{book.summary}})
-      </li>
-      {% endfor %}
-    </ul>
-  {% else %}
-    <p>There are no books by this author.</p>
-  {% endif %}
-  {% block sidebar %}
+<h1>Author: {{ author }} </h1>
+<p>{{author.date_of_birth}} - {% if author.date_of_death %}{{author.date_of_death}}{% endif %}</p>
+
+<div style="margin-left:20px;margin-top:20px">
+<h4>Books</h4>
+
+<dl>
+{% for book in author.book_set.all %}
+  <dt><a href="{% url 'book-detail' book.pk %}">{{book}}</a> ({{book.bookinstance_set.all.count}})</dt>
+  <dd>{{book.summary}}</dd>
+  {% empty %}
+  <p>This author has no books.</p>
+{% endfor %}
+</dl>
+
+</div>
+{% endblock %}
+
+{% block sidebar %}
   {{ block.super }}
 
   {% if perms.catalog.change_author or perms.catalog.delete_author %}
@@ -33,4 +38,4 @@
 {% endblock %}
 
  
-{% endblock %}
+
